Deci, eu zic ca facem tabelele sa fie afisate in asta. Dupa ce sunt afisate, ai trei butoane care iti permit sa adaugi, stergi, sau sa modifici chestii. Daca n-ai permisiune, primesti eroare. Simplu si bun.

--- a/Proiect_POO_bun.csproj
+++ b/Proiect_POO_bun.csproj
@@ -58,6 +58,11 @@
     <Compile Include="MainAppForm.Designer.cs">
       <DependentUpon>MainAppForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="POODataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>POODataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -76,6 +81,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="POODataSet.xsc">
+      <DependentUpon>POODataSet.xsd</DependentUpon>
+    </None>
+    <None Include="POODataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>POODataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="POODataSet.xss">
+      <DependentUpon>POODataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -94,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\POO_Login.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
