--- a/Proiect_POO_bun.csproj
+++ b/Proiect_POO_bun.csproj
@@ -98,6 +98,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddMateriiForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddMateriiForm.Designer.cs">
+      <DependentUpon>AddMateriiForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DeleteUserForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -130,6 +136,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StergeMaterie.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StergeMaterie.Designer.cs">
+      <DependentUpon>StergeMaterie.cs</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
@@ -137,6 +149,9 @@
     <Compile Include="UserForm.Designer.cs">
       <DependentUpon>UserForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddMateriiForm.resx">
+      <DependentUpon>AddMateriiForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="DeleteUserForm.resx">
       <DependentUpon>DeleteUserForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -159,6 +174,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StergeMaterie.resx">
+      <DependentUpon>StergeMaterie.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
